# rust-training

./: .gitignore  RUST.docx  Rust_Systems_Programming_15_Week_Lesson_Plan.docx  Rust_Systems_Programming_15_Week_Lesson_Plan_UPDATED.docx.url  Self Study Workplan - TB.docx  Self-Study Proposal-TB.docx  Self-Study-TB-RUST-1rst-Report.docx
get-dependencies/projects/: ref_borrowing.rs
get-dependencies/projects/Arrays/: Cargo.toml
get-dependencies/projects/Ownership_and_Functions/: references_and_borrowing.rs
get-dependencies/projects/Structs/: TheTupleType.rs  methods.rs  rust_structs_and_tuples_study_guide.rs  struct_update_syntax.rs  tuple_structs.rs
get-dependencies/projects/TheSliceType/: firstWord_returnSlice.rs  idiomatic_rust.rs  rust_string_slices_study_guide.rs  string_literal_as_slice.rs
get-dependencies/projects/branches/src/: main.rs
get-dependencies/projects/functions/: Cargo.toml  functions.rs
get-dependencies/projects/guess_game_gui/: Cargo.toml
get-dependencies/projects/guess_game_gui/src/: main.rs
get-dependencies/projects/loops/src/: main.rs
get-dependencies/projects/ultra_guessing_game/: Cargo.toml  leaderboard.txt
get-dependencies/projects/ultra_guessing_game/src/: main.rs
get-dependencies/projects/variables/: variables.rs
